Added i18n. Made buttons to visually show the default action. Closes #41.

--- a/app/views/layouts/list.html.erb
+++ b/app/views/layouts/list.html.erb
@@ -55,7 +55,7 @@
       <div id="headerLeft">
         <ul class="breadcrumb">
           <li>
-            <%= link_to("Dashboard", rails_admin_dashboard_path) %>
+            <%= link_to(t('admin.dashboard.name'), rails_admin_dashboard_path) %>
             &rsaquo;
           </li>
           <li>
