--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -18,7 +18,7 @@
       <div id="headerLeft">
         <ul class="breadcrumb">
           <li>
-            <%= link_to("Dashboard", rails_admin_dashboard_path) %>
+            <%= link_to(t('admin.dashboard.name'), rails_admin_dashboard_path) %>
           </li>
         </ul>
         <h1>Rails Admin</h1>
