--- a/app/views/layouts/form.html.erb
+++ b/app/views/layouts/form.html.erb
@@ -46,7 +46,7 @@
       <div id="headerLeft">
         <ul class="breadcrumb">
           <li>
-            <%= link_to("Dashboard", rails_admin_dashboard_path) %>
+            <%= link_to(t('admin.dashboard.name'), rails_admin_dashboard_path) %>
             &rsaquo;
           </li>
           <li>
