--- a/app/views/rails_admin/_userinfo.html.erb
+++ b/app/views/rails_admin/_userinfo.html.erb
@@ -2,12 +2,12 @@
   <li>
     <a href="#"><%= current_user.email.split("@")[0] %></a>
   </li>
-  <li>|</li>
+  <!--<li>|</li>
   <li>
     <a href="#">My profile</a>
-  </li>
+  </li>-->
   <li>|</li>
   <li>
-    <a href="<%= destroy_user_session_path() %>">Log out</a>
+    <a href="<%= destroy_user_session_path() %>"><%= t("admin.credentials.log_out")%></a>
   </li>
 </ul>
