--- a/app/views/rails_admin/edit.html.erb
+++ b/app/views/rails_admin/edit.html.erb
@@ -1,12 +1,12 @@
       <div id="contentHeader">
         <h2><%= @page_name %></h2>
-        <a href="#" id="deleteItem"><img src="/images/cross.png" alt="Delete">Delete</a>
+        <a href="<%= %>" id="deleteItem"><img src="/images/cross.png" alt="Delete"><%= t("admin.list.delete_action") %></a>
       </div>
 <%= render(:partial => 'layouts/flash', :locals => {:flash => flash}) -%>
       <div id="contentMainNew">
         <%= form_for(@object, :url => rails_admin_update_path(:model_name => @abstract_model.to_param, :id => @object.id)) do %>
           <fieldset>
-		        <h2>BASIC INFO</h2>
+		        <h2><%= t("admin.new.basic_info")%></h2>
       			<div class="formSection">
 <%= render(:partial => 'properties', :properties => @properties) -%>
             </div>
@@ -17,13 +17,13 @@
 
             <ul id="submitArea">
         	    <li id="saveContainer">
-        	      <%= submit_tag "Save", :class => "default", :name => "_save", :id => "save_btn" %>
+        	      <%= submit_tag t("admin.new.save"), :class => "button default", :name => "_save", :id => "save_btn" %>
         	    </li>
               <li id="saveEditContainer">
-                <%= submit_tag "Save and edit", :name => "_add_edit", :id => "saveEdit_btn" %>
+                <%= submit_tag t("admin.new.save_and_edit"), :class => "button", :name => "_add_edit", :id => "saveEdit_btn" %>
               </li>
               <li id="cancelContainer">
-                <%= submit_tag "cancel", :name => "_continue", :id => "cancel_btn" %>
+                <%= submit_tag t("admin.new.cancel"), :class => "button", :name => "_continue", :id => "cancel_btn" %>
               </li>
             </ul>
             
