--- a/app/views/rails_admin/index.html.erb
+++ b/app/views/rails_admin/index.html.erb
@@ -5,14 +5,15 @@
         <div id="contentMain">
           <div class="section">
             <ul class="menu">
-              <li id="modelNameHeader">Model name</li>
-              <li id="lastUsedHeader">Last used</li>
-              <li id="recordsHeader">Records</li>
-              <li id="modifyHeader">Modify</li>
+              <li id="modelNameHeader"><%= t "admin.dashboard.model_name" %></li>
+              <li id="lastUsedHeader"><%= t "admin.dashboard.last_used" %></li>
+              <li id="recordsHeader"><%= t "admin.dashboard.records" %></li>
+              <li id="modifyHeader"><%= t "admin.dashboard.modify" %></li>
             </ul>
             <% @abstract_models.each do |abstract_model| %>
             <ul class="row">
               <li class="modelNameRow"><%= abstract_model.pretty_name %></li>
+              <!-- FIXME History stuff goes here-->
               <li class="lastUsedRow">Yesterday</li>
               <li class="recordsRow">
                 <div class="scale">
@@ -22,14 +23,14 @@
                 </div>
               </li>
               <li class="modifyRow">
-                <%= link_to("Add new", rails_admin_new_path(:model_name => abstract_model.to_param), :class => "add") %>|<%= link_to("Show", rails_admin_list_path(:model_name => abstract_model.to_param), :class => "show") %>
+                <%= link_to(t("admin.dashboard.add_new"), rails_admin_new_path(:model_name => abstract_model.to_param), :class => "add") %>|<%= link_to(t("admin.dashboard.show"), rails_admin_list_path(:model_name => abstract_model.to_param), :class => "show") %>
               </li>
             </ul>
             <% end %>
           </div>
 
           <div class="section">
-            <h2>History</h2>
+            <h2><%= t("admin.history.name") %></h2>
             <div id="timeline">
               <a href="javascript:void(0)" id="arrowLeft" ref="-1"><img src="/images/arrow_left.png" alt="Left" /></a>
               <div id="timelineSlider">
@@ -57,7 +58,7 @@
               <p id="listing">Listing <strong><%= Time.now.strftime("%B %Y")%></strong> History:</p>
               <ul id="history">
                 <% @historyListing.each do |t|%>
-                <li><%= @users[t.id].split("@")[0] %> <%= getActionHere(t.action )%> <em><%= t.other %></em> <%= t.table.downcase %></li>
+                <li><%= @users[t.id]%> <%= getActionHere(t.action )%> <em><%= t.other %></em> <%= t.table.downcase %></li>
                 <% end %>
               </ul>
             </div>
