--- a/app/views/rails_admin/list.html.erb
+++ b/app/views/rails_admin/list.html.erb
@@ -29,9 +29,9 @@
         <h2><%= @page_name %></h2>
       	<div id="quickAccess">
       	  <ul id="quick">
-      	    <li><a href="#">Quick add</a></li>
+      	    <!--<li><a href="#">Quick add</a></li>-->
       	    <li>
-      	     <%= link_to("Add new", rails_admin_new_path(:model_name => @abstract_model.to_param), :class => "addlink") %>
+      	     <%= link_to(t("admin.list.add_new"), rails_admin_new_path(:model_name => @abstract_model.to_param), :class => "addlink") %>
       	    </li>
       	  </ul>
       	</div>
@@ -42,7 +42,7 @@
           <form action="#" action="" method="get">
             <fieldset>
               <input type="text" id="searchBar" name="query" value="<%= query %>"/>
-              <input type="submit" id="searchbar_btn" value="SEARCH" />
+              <input type="submit" id="searchbar_btn" value="<%= t("admin.list.search_btn")%>" />
             </fieldset>
           </form>
         </div>
@@ -60,8 +60,8 @@
           </li>
           <% end %>
           <li class="otherHeader otherHeaderRight">...</li>
-          <li class="actionHeader">EDIT</li>
-          <li class="actionHeader">DELETE</li>
+          <li class="actionHeader"><%= t("admin.list.edit_action").upcase%></li>
+          <li class="actionHeader"><%= t("admin.list.delete_action").upcase%></li>
         </ul>
 
         <% @objects.each_with_index do |object, index| %>
@@ -74,8 +74,8 @@
           <% end %>
           <% otherRight = params.reject{|key,value| key == "set"}.merge(:set => params[:set].to_i + 1) %>
           <li class="otherRow otherRight"><%= link_to("...", otherRight, :ref => otherRight.to_json)%></li>
-          <li class="actionRow editAction"><%= link_to("Edit", rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id)) %></li>
-          <li class="actionRow deleteAction"><%= link_to("Delete",rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => object.id)) %></li>
+          <li class="actionRow editAction"><%= link_to(t("admin.list.edit_action"), rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id)) %></li>
+          <li class="actionRow deleteAction"><%= link_to(t("admin.list.delete_action"),rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => object.id)) %></li>
         </ul>
         <% end %>
       </div>
@@ -88,7 +88,7 @@
       <% end %>
       <%= @record_count %> <%= @record_count == 1 ? @abstract_model.pretty_name.downcase : @abstract_model.pretty_name.downcase.pluralize %>
       <% if @page_count.to_i == 2 %>
-        <%= link_to("Show all", params.merge(:all => true), :class => "showall") %>	 	
+        <%= link_to(t("admin.list.show_all"), params.merge(:all => true), :class => "showall") %>	 	
       <% end %>
       </p>
     </div>
