--- a/public/stylesheets/delete.css
+++ b/public/stylesheets/delete.css
@@ -5,10 +5,12 @@
 #contentMainDelete ul{
   margin-left:14px;
   margin-top:4px;
+  
 }
 
 #contentMainDelete ul li{
   margin-bottom:3px;
+  margin-left:5px;
 }
 
 #contentMainDelete ul li a{
@@ -20,48 +22,76 @@
 }
 
 #deleteConfirmation{
-  margin-left:-5px;
-  margin-bottom:-4px;
-  background:url(/images/delete_confirmation.png) no-repeat;
-  width:296px;
-  height:37px;
+  margin-top:5px;
+  margin-left:-20px;
 }
 
 #deleteConfirmation input{
-  background:none;
-  margin-top:9px;
-  margin-left:6px;
-  width:94px;
-  height:26px;
-  border:none;
-  text-indent:-9999px;
+  
 }
 
-ul#submitArea{
+#submitArea{
+  display:block;
   list-style-type:none;
+  margin-bottom:5px;
 }
 
-ul#submitArea li{
+#submitArea li{
   float:left;
+  margin-right:2px;
+  padding-bottom:5px;
 }
-
 #cancelContainer{
-  background:url(/images/cancel.png);
-  width:82px;
-  height:42px;
-  margin-top:-3px;
-  margin-left:-12px;
 }
 
 #cancel_btn{
-  cursor:pointer;
-  background:none;
-  border:none;
-  font-family:Verdana, Geneva, sans-serif;
-  font-size:10px;
-  width:66px;
-  height:24px;
-  text-indent:-9999px;
-  margin-left:7px;
-  margin-top:-5px;
+  
+}
+
+.button:active{
+	background: #CCCCCC;
+  background: -webkit-gradient(linear, left top, left bottom, from(#CCCCCC), to(#DDDDDD));
+  background: -moz-linear-gradient(top,  #CCCCCC,  #DDDDDD);
+  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#CCCCCC', endColorstr='#DDDDDD');
+}
+
+.button{
+  display: inline-block;
+  outline: none;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  font-size: 10px;
+  padding:5px;
+  padding-left:10px;
+  padding-right:10px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.2);
+  -moz-box-shadow: 0 1px 1px rgba(0,0,0,.2);
+  box-shadow: 0 1px 2px rgba(0,0,0,.2);
+  color: #000;
+	border: solid 1px #CDCDCD;
+	background: #DDDDDD;
+	background: -webkit-gradient(linear, left top, left bottom, from(#DDDDDD), to(#CCCCCC));
+	background: -moz-linear-gradient(top,  #DDDDDD,  #CCCCCC);
+	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#DDDDDD', endColorstr='#CCCCCC');  
+}
+
+
+input.default{
+  color:#d9eef7;
+  border: solid 1px #0076c3;
+	background: #007ead;
+	background: -webkit-gradient(linear, left top, left bottom, from(#00adee), to(#0078a5));
+	background: -moz-linear-gradient(top,  #00adee,  #0078a5);
+	filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#00adee', endColorstr='#0078a5');
+}
+
+input.default:active{
+	background: #00adee;
+  background: -webkit-gradient(linear, left top, left bottom, from(#0078a5), to(#00adee));
+  background: -moz-linear-gradient(top,  #0078a5,  #00adee);
+  filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#0078a5', endColorstr='#00adee');
 }
