--- a/app/views/rails_admin/list.html.erb
+++ b/app/views/rails_admin/list.html.erb
@@ -31,8 +31,12 @@
       	  <ul id="quick">
       	    <!--<li><a href="#">Quick add</a></li>-->
       	    <li>
+      	     <%= link_to(t("admin.history.name"), rails_admin_show_history_path(:model_name => @abstract_model.to_param, :id => params[:id]), :class => "addlink") %>
+      	    </li>
+      	    <li>
       	     <%= link_to(t("admin.list.add_new"), rails_admin_new_path(:model_name => @abstract_model.to_param), :class => "addlink") %>
       	    </li>
+      	    
       	  </ul>
       	</div>
       </div>
