Removing redundancy between plugin and dummy_app

--- a/spec/dummy_app/app/views/rails_admin/_boolean.html.erb
+++ b/spec/dummy_app/app/views/rails_admin/_boolean.html.erb
@@ -1,7 +1,1 @@
-<%
-  property_name = property[:name]
-  label = property[:pretty_name]
-  model_name = @abstract_model.to_param
-%>
-                <%= label_tag label %>
-                <%= check_box model_name, property_name, :checked => @object.send(property_name) ? true : false %>
+../../../../../app/views/rails_admin_boolean.html.erb
