--- a/spec/dummy_app/app/views/rails_admin/_userinfo.html.erb
+++ b/spec/dummy_app/app/views/rails_admin/_userinfo.html.erb
@@ -1,13 +1,13 @@
 <ul class="breadcrumb">
   <li>
-    <a href="#"><%= "Name goes here" %></a>
+    <a href="#"></a>
   </li>
-  <li>|</li>
+  <!--<li>|</li>
   <li>
     <a href="#">My profile</a>
-  </li>
+  </li>-->
   <li>|</li>
   <li>
-    <a href="<%=  "#" %>">Log out</a>
+    <a href=""><%= t("admin.credentials.log_out")%></a>
   </li>
 </ul>
