--- a/spec/dummy_app/app/views/rails_admin/index.html.erb
+++ b/spec/dummy_app/app/views/rails_admin/index.html.erb
@@ -1,63 +1,1 @@
-        <div id="contentHeader">
-          <h2><%= @page_name %></h2>
-        </div>
-<%= render(:partial => 'layouts/flash', :locals => {:flash => flash}) -%>
-        <div id="contentMain">
-          <div class="section">
-            <ul class="menu">
-              <li id="modelNameHeader">Model name</li>
-              <li id="lastUsedHeader">Last used</li>
-              <li id="recordsHeader">Records</li>
-              <li id="modifyHeader">Modify</li>
-            </ul>
-            <% @abstract_models.each do |abstract_model| %>
-            <ul class="row">
-              <li class="modelNameRow"><%= abstract_model.pretty_name %></li>
-              <li class="lastUsedRow">Yesterday</li>
-              <li class="recordsRow">
-                <div class="scale">
-                  <div class="bar" style="width:20%;"></div>
-                </div>
-              </li>
-              <li class="modifyRow">
-                <%= link_to("Add new", rails_admin_new_path(:model_name => abstract_model.to_param), :class => "add") %>|<%= link_to("Show", rails_admin_list_path(:model_name => abstract_model.to_param), :class => "show") %>
-              </li>
-            </ul>
-            <% end %>
-          </div>
-
-          <div class="section">
-            <h2>History</h2>
-            <div id="timeline">
-              <a href="javascript:void(0)" id="arrowLeft" ref="-1"><img src="/images/arrow_left.png" alt="Left" /></a>
-              <div id="timelineSlider">
-                <% max = @history[0].number %>
-                <% @history.each{|t| max = t.number if t.number > max} %>
-                <ul>
-                  <% @history.each do |t| %>
-                  <% procent = (t.number * 100) / max unless max == 0 %>
-                  <% indicator_type = getIndicator(procent)%>
-                  <li><span><%= t.number != 0 ? Time.parse("01/#{t.month}/#{t.year}").strftime("%B %Y") : "No activity" %></span>
-                    <span class="bars">
-                      <span class="indicator <%= indicator_type %>" style="height:<%= procent %>%"></span>
-                    </span>
-                  </li>
-                  <% end %>
-                </ul>
-                <div id="handler">
-                  <img src="/images/handler.png"/>
-                </div>
-              </div>
-
-              <a href="javascript:void(0)" id="arrowRight" ref="1"><img src="/images/arrow_right.png" alt="Right" /></a>
-            </div>
-            <div id="listingHistory">
-              <p id="listing">Listing <strong><%= Time.now.strftime("%B %Y")%></strong> History:</p>
-              <ul id="history">
-                <% @historyListing.each do |t|%>
-                <li>John added <em>Poll #1</em></li>
-                <% end %>
-              </ul>
-            </div>
-          </div>
-        </div>
+../../../../../app/views/rails_adminindex.html.erb
