--- a/spec/dummy_app/app/views/layouts/_flash.html.erb
+++ b/spec/dummy_app/app/views/layouts/_flash.html.erb
@@ -1,10 +1,1 @@
-      <% if flash && flash[:error] %>
-      <div id="error">
-      	<%= flash[:error] %>
-      </div>
-      <% end %>
-      <% if flash && flash[:notice] %>
-      <div id="highlight">
-      	<%= flash[:notice] %>
-      </div>
-      <% end %>
+../../../../../app/views/layouts_flash.html.erb
