--- a/spec/dummy_app/app/views/layouts/application.html.erb
+++ b/spec/dummy_app/app/views/layouts/application.html.erb
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Dummy</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
-</html>
+../../../../../app/views/layoutsapplication.html.erb
