--- a/spec/dummy_app/app/views/layouts/list.html.erb
+++ b/spec/dummy_app/app/views/layouts/list.html.erb
@@ -1,92 +1,1 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="robots" content="NONE,NOARCHIVE" />
-  <title><%= @page_name %> | <%= @plugin_name %></title>
-  <%= stylesheet_link_tag('base') %>
-  <%= stylesheet_link_tag('list') %>
-  <%= javascript_include_tag('prototype.js') %>
-
-  <script type="text/javascript" language="javascript">
-    function updatePage(paramList){
-
-      new Ajax.Updater('content', '/admin/<%= @abstract_model.pretty_name.downcase %>/set',{
-        parameters: paramList,
-        onComplete: function(){
-          initPages();
-        }
-      });
-    }
-
-    function initPages(){
-      $$(".otherLeft").each(function(elem){
-        elem.childElements()[0].writeAttribute("href","#");
-
-        Event.observe(elem,'click',function(e){
-          elem.childElements()[0].writeAttribute("href","#");
-          var ref = elem.childElements()[0].readAttribute("ref");
-          updatePage(JSON.parse(ref));
-//          updatePage
-        })
-
-      })
-
-      $$(".otherRight").each(function(elem){
-        elem.childElements()[0].writeAttribute("href","#");
-
-        Event.observe(elem,'click',function(e){
-          elem.childElements()[0].writeAttribute("href","#");
-          var ref = elem.childElements()[0].readAttribute("ref");
-          updatePage(JSON.parse(ref));
-        })
-
-      })
-    }
-
-    document.observe("dom:loaded", function() {
-      initPages();
-    })
-  </script>
-</head>
-<body>
-  <div id="wraper">
-    <div id="header">
-      <div id="headerLeft">
-        <ul class="breadcrumb">
-          <li>
-            <%= link_to("Dashboard", rails_admin_dashboard_path) %>
-            &rsaquo;
-          </li>
-          <li>
-            <%= link_to(@abstract_model.pretty_name, rails_admin_list_path(:model_name => @abstract_model.to_param)) %>
-          </li>
-        </ul>
-        <h1>Rails Admin</h1>
-      </div>
-
-<% # FIXME no need to get whole array list with every model
-%>
-<%= render(:partial => 'rails_admin/navigation', :locals => {:abstract_models => @abstract_models}) %>
-
-      <div id="headerRight">
-        <ul class="breadcrumb">
-          <li>
-            <a href="#">John Doe</a>
-          </li>
-          <li>|</li>
-          <li>
-            <a href="#">My profile</a>
-          </li>
-          <li>|</li>
-          <li>
-            <a href="#">Log out</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div id="content">
-<%= content_for(:layout) %>
-  </div>
-</body>
-</html>
+../../../../../app/views/layoutslist.html.erb
