--- a/spec/dummy_app/app/views/rails_admin/_float.html.erb
+++ b/spec/dummy_app/app/views/rails_admin/_float.html.erb
@@ -1,10 +1,1 @@
-<%
-  property_name = property[:name]
-  length = property[:length]
-  label = property[:pretty_name]
-  required = !property[:nullable?] || property[:serial?]
-  model_name = @abstract_model.to_param
-%>
-               <%= label_tag "#{property_name}", label %>
-
-               <%= text_field model_name, property_name,  :maxlength => length, :class => "floatField #{errors_exist ? "errorField" : nil}", :value => object_property(@object,property) %>
+../../../../../app/views/rails_admin_float.html.erb
