--- a/spec/dummy_app/app/views/rails_admin/_navigation.html.erb
+++ b/spec/dummy_app/app/views/rails_admin/_navigation.html.erb
@@ -1,19 +1,1 @@
-<%
-  max_visible_tabs = 5
-%>
-      <ul id="nav">
-        <li <%if @page_type == "dashboard" %>id="active"<% end %>><%= link_to("Dashboard", rails_admin_dashboard_path) %></li>
-<% @abstract_models[0..max_visible_tabs-1].each do |abstract_model| %>
-        <li <%if @page_type == abstract_model.pretty_name.downcase %>id="active"<% end %>><%= link_to(abstract_model.pretty_name, rails_admin_list_path(:model_name => abstract_model.to_param)) %></li>
-<% end %>
-<% if @abstract_models.size > max_visible_tabs-1%>
-        <li id="more">
-        	<a href="#">&raquo;</a>
-          <ul>
-          <% @abstract_models[max_visible_tabs..@abstract_models.size].each do |abstract_model| %>
-          <li <%if @page_type == abstract_model.pretty_name.downcase %>id="active"<% end %>><%= link_to(abstract_model.pretty_name, rails_admin_list_path(:model_name => abstract_model.to_param)) %></li>
-          <% end %>
-          </ul>
-        </li>
-<% end %>
-      </ul>
+../../../../../app/views/rails_admin_navigation.html.erb
