--- a/spec/dummy_app/app/views/rails_admin/history.html.erb
+++ b/spec/dummy_app/app/views/rails_admin/history.html.erb
@@ -1,6 +1,1 @@
-<p id="listing">Listing <strong><%= Time.parse("01/#{@current_month.month}/#{@current_month.year}").strftime("%B %Y")%></strong> History:</p>
-<ul id="history">
-<% @history.each do |t|%>
-<li>John added <em>Poll #1</em></li>
-<% end %>
-</ul>
+../../../../../app/views/rails_adminhistory.html.erb
