Reducing redundancies for dummy_app

--- a/spec/dummy_app/app/views/rails_admin/_userinfo.html.erb
+++ b/spec/dummy_app/app/views/rails_admin/_userinfo.html.erb
@@ -8,6 +8,6 @@
   </li>-->
   <li>|</li>
   <li>
-    <a href=""><%= t("admin.credentials.log_out")%></a>
+    <a href="#"><%= t("admin.credentials.log_out")%></a>
   </li>
 </ul>
