--- a/app/views/rails_admin/show_history.html.erb
+++ b/app/views/rails_admin/show_history.html.erb
@@ -97,4 +97,16 @@
         
       </div>
     </div>
+    <% if @general %>
+    <div id="pagination">
+      <p class="paginator">
+      <% if @page_count.to_i > 1 %>
+        <%= paginate(@current_page, @page_count, :url => params.reject{|t| t == "page" || t=="all"}).html_safe %>
+      <% end %>
+      <% if @page_count.to_i == 2 %>
+        <%= link_to(t("admin.list.show_all"), params.reject{|t| t == "page"}.merge(:all => true), :class => "showall") %>	 	
+      <% end %>
+      </p>
+    </div>
 
+    <% end %>
