--- a/app/views/rails_admin/history.html.erb
+++ b/app/views/rails_admin/history.html.erb
@@ -1,6 +1,6 @@
 <p id="listing">Listing <strong><%= Time.parse("01/#{@current_month.month}/#{@current_month.year}").strftime("%B %Y")%></strong> History:</p>
 <ul id="history">
 <% @history.each do |t|%>
-<li><%= t.username%> <%= historyOutput(t)%></li>
+<li><%= t.username%> <%= history_output(t)%></li>
 <% end %>
 </ul>
