--- a/app/views/rails_admin/_navigation.html.erb
+++ b/app/views/rails_admin/_navigation.html.erb
@@ -2,16 +2,16 @@
   max_visible_tabs = 5
 %>
       <ul id="nav">
-        <li <%if @page_type == "dashboard" %>id="active"<% end %>><%= link_to(t("admin.dashboard.name"), rails_admin_dashboard_path) %></li>
+        <li <%if @page_type == "dashboard" %>class="active"<% end %>><%= link_to(t("admin.dashboard.name"), rails_admin_dashboard_path) %></li>
 <% @abstract_models[0..max_visible_tabs-1].each do |abstract_model| %>
-        <li <%if @page_type == abstract_model.pretty_name.downcase %>id="active"<% end %>><%= link_to(abstract_model.pretty_name, rails_admin_list_path(:model_name => abstract_model.to_param)) %></li>
+        <li <%if @page_type == abstract_model.pretty_name.downcase %>class="active"<% end %>><%= link_to(abstract_model.pretty_name, rails_admin_list_path(:model_name => abstract_model.to_param)) %></li>
 <% end %>
-<% if @abstract_models.size > max_visible_tabs-1%>
-        <li id="more">
+<% if @abstract_models.size > max_visible_tabs %>
+        <li class="more">
         	<a href="#">&raquo;</a>
           <ul>
           <% @abstract_models[max_visible_tabs..@abstract_models.size].each do |abstract_model| %>
-          <li <%if @page_type == abstract_model.pretty_name.downcase %>id="active"<% end %>><%= link_to(abstract_model.pretty_name, rails_admin_list_path(:model_name => abstract_model.to_param)) %></li>
+          <li <%if @page_type == abstract_model.pretty_name.downcase %>class="active"<% end %>><%= link_to(abstract_model.pretty_name, rails_admin_list_path(:model_name => abstract_model.to_param)) %></li>
           <% end %>
           </ul>
         </li>
