--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -22,7 +22,6 @@ body{
   font-size:10px;
   color:#FFF;
   margin-top:8px;
-
   height:67px;
 }
 
@@ -66,65 +65,6 @@ ul.breadcrumb li a:hover{
   margin-top:25px;
   font-weight:normal;
   font-size:22px;
-
-}
-
-#nav li#more{
-  margin-top:-9px;
-}
-
-#nav li#more a{
-  background:url(/images/navigation_more.png) no-repeat;
-  display:block;
-  text-indent:-9999px;
-}
-
-ul#nav{
-  float:left;
-  list-style-type:none;
-  margin-top:26px;
-  margin-left:20px;
-}
-
-#nav li{
-  display:block;
-  float:left;
-
-  font-size:12px;
-  padding-bottom:8px;
-  padding-top:8px;
-  margin-right:2px;
-}
-#nav li a{
-  color:#000;
-  text-decoration:none;
-  padding:8px;
-  padding-left:12px;
-  padding-right:12px;
-  background:#9e988e;
-}
-
-#nav li a:hover{
-  background:#aaa69f;
-}
-
-#nav li#active a{
-  background:#F6F6F6;
-}
-
-#nav li a img{
-  border:none;
-}
-
-#nav li a.addnew{
-  position:relative;
-  right:9px;
-  top:1px;
-  color:#000;
-  text-decoration:none;
-  padding:0px;
-  padding-left:0px;
-  padding-right:0px;
 }
 
 #headerRight{
@@ -160,7 +100,6 @@ ul#nav{
   float:left;
   background:#FFF;
   border:1px solid #e6e6e6;
-
 }
 
 #contentHeader{
@@ -252,47 +191,108 @@ ul#quick li a {
   right:3px;
 }
 
-ul#nav li#more a{
+ul#nav{
+  float:left;
+  list-style-type:none;
+  margin-top:26px;
+  margin-left:20px;
+}
+
+#nav li{
+  display:block;
+  float:left;
+  font-size:12px;
+  padding-bottom:8px;
+  padding-top:8px;
+  margin-right:2px;
+}
+
+#nav li a{
+  color:#000;
+  text-decoration:none;
+  padding:8px;
+  padding-left:12px;
+  padding-right:12px;
+  background:#9e988e;
+}
+
+#nav li a:hover{
+  background:#aaa69f;
+}
+
+#nav li.active a{
+  background:#F6F6F6;
+}
+
+#nav li a img{
+  border:none;
+}
+
+#nav li a.addnew{
+  position:relative;
+  right:9px;
+  top:1px;
+  color:#000;
+  text-decoration:none;
+  padding:0px;
+  padding-left:0px;
+  padding-right:0px;
+}
+
+#nav li.more{
+  margin-top:-9px;
+}
+
+ul#nav li.more:hover ul{
+  display:block;
+}
+
+ul#nav li.more ul{
+  display:none;
+  margin:0;
+  width:120px;
+  position:absolute;
+  margin-left:-2px;
+}
+
+ul#nav li.more ul li{
+  float:none;
+  margin:0;
+  padding:0;
+}
+
+#nav li.more a{
+  background:url(/images/navigation_more.png) no-repeat;
+  display:block;
+  text-indent:-9999px;
+}
+
+ul#nav li.more a{
   width:25px;
   height:32px;
   padding:0;
   margin:0;
 }
 
-ul#nav li#more:hover ul{
-  display:block;
-}
-
-ul#nav li#more ul{
-  display:none;
-  margin:0;
-  background:#9e988e;
-  width:120px;
-  position:absolute;
-  margin-left:-2px;
-}
-
-ul#nav li#more ul li{
-  float:none;
-  margin:0;
-  padding:5px;
-  padding-bottom:0px;
-  padding-top:0px;
-}
-
-ul#nav li#more ul li:first-child  a{
+ul#nav li.more ul li:first-child  a{
   border-top:none;
 }
 
-ul#nav li#more ul li a{
-  background:none;
+ul#nav li.more ul li a{
+  background:#9e988e;
   text-indent:0px;
-  padding:0;
+  padding:7px 5px 4px 5px;
   height:15px;
   font-size:10px;
   color:#FFF;
-  padding-top:7px;
-  padding-bottom:4px;
   border-top:1px solid #c7c7c7;
   width:110px;
+}
+
+ul#nav li.more ul li a:hover{
+  background:#aaa69f;
+}
+
+ul#nav li.more ul li.active a{
+  background:#aaa69f;
 }
