--- a/app/views/layouts/form.html.erb
+++ b/app/views/layouts/form.html.erb
@@ -61,10 +61,10 @@
 				<h1>Rails Admin</h1>
 			</div>
 
-<%= render(:partial => 'rails_admin/navigation', :locals => {:abstract_models => @abstract_models}) %>
+<%= render(:partial => 'main/navigation', :locals => {:abstract_models => @abstract_models}) %>
 			
 			<div id="headerRight">
-<%= render(:partial => 'rails_admin/userinfo', :locals => {:current_user => current_user}) %>
+<%= render(:partial => 'main/user_info', :locals => {:current_user => current_user}) %>
       </div>
     </div>
     <div id="content">
