--- a/app/views/layouts/list.html.erb
+++ b/app/views/layouts/list.html.erb
@@ -11,7 +11,7 @@
   <script type="text/javascript" language="javascript">
     function updatePage(paramList){
 
-      new Ajax.Updater('content', '/admin/<%= @abstract_model.pretty_name.downcase %>/set',{
+      new Ajax.Updater('content', '/admin/<%= @abstract_model.pretty_name.downcase %>/get_pages',{
         parameters: paramList,
         onComplete: function(){
           initPages();
@@ -74,10 +74,10 @@
         </ul>
         <h1>Rails Admin</h1>
       </div>
-<%= render(:partial => 'rails_admin/navigation', :locals => {:abstract_models => @abstract_models}) %>
+<%= render(:partial => 'main/navigation', :locals => {:abstract_models => @abstract_models}) %>
 
       <div id="headerRight">
-<%= render(:partial => 'rails_admin/userinfo', :locals => {:current_user => current_user}) %>
+<%= render(:partial => 'main/user_info', :locals => {:current_user => current_user}) %>
       </div>
     </div>
     <div id="content">
