--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -38,7 +38,7 @@
           </ul>
         </div>
       </div>
-<%= render(:partial => 'layouts/flash', :locals => {:flash => flash}) -%>
+<%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
       <div id="contentMainModules">
         <div class="searchBox">
           <form action="#" action="" method="get">
