--- a/app/views/rails_admin/main/show_history.html.erb
+++ b/app/views/rails_admin/main/show_history.html.erb
@@ -9,7 +9,7 @@
       <div id="contentHeader">
         <h2><%= @page_name %></h2>
       </div>
-<%= render(:partial => 'layouts/flash', :locals => {:flash => flash}) -%>
+<%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
       <div id="contentMainModules">
         <div class="searchBox">
           <form action="#" method="get">
