--- a/app/views/layouts/rails_admin/dashboard.html.erb
+++ b/app/views/layouts/rails_admin/dashboard.html.erb
@@ -24,10 +24,10 @@
         <h1><%= @plugin_name %></h1>
       </div>
 
-<%= render(:partial => 'main/navigation', :locals => {:abstract_models => @abstract_models}) %>
+<%= render(:partial => 'rails_admin/main/navigation', :locals => {:abstract_models => @abstract_models}) %>
 
       <div id="headerRight">
-<%= render(:partial => 'main/user_info', :locals => {:current_user => current_user}) %>
+<%= render(:partial => 'rails_admin/main/user_info', :locals => {:current_user => current_user}) %>
       </div>
     </div>
 
