--- a/app/views/layouts/rails_admin/application.html.erb
+++ b/app/views/layouts/rails_admin/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RailsAdmin</title>
+  <title><%= @plugin_name %></title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tag %>
