--- a/app/views/rails_admin/main/_text.html.erb
+++ b/app/views/rails_admin/main/_text.html.erb
@@ -6,4 +6,4 @@
 %>
               <%= label_tag label %>
 
-              <%= text_area model_name, property_name, :cols => 50, :rows => 10, :class => "textField", :value => @object.send(property_name) %>
+              <%= text_area model_name, property_name, :cols => 80, :class => "textField", :value => @object.send(property_name) %>
