--- a/app/views/rails_admin/main/_navigation.html.erb
+++ b/app/views/rails_admin/main/_navigation.html.erb
@@ -1,17 +1,18 @@
 <%
-  max_visible_tabs = 5
+  max_visible_tabs = RailsAdmin::Config::Navigation.max_visible_tabs
+  models = RailsAdmin::Config::Navigation.visible_models  
 %>
       <ul id="nav">
         <li <%if @page_type == "dashboard" %>class="active"<% end %>><%= link_to(t("admin.dashboard.name"), rails_admin_dashboard_path) %></li>
-<% @abstract_models[0..max_visible_tabs-1].each do |abstract_model| %>
-        <li <%if @page_type == abstract_model.pretty_name.downcase %>class="active"<% end %>><%= link_to(abstract_model.pretty_name, rails_admin_list_path(:model_name => abstract_model.to_param)) %></li>
+<% models[0..max_visible_tabs-1].each do |model| %>
+        <li <%if @page_type == model.pretty_name.downcase %>class="active"<% end %>><%= link_to(RailsAdmin.config(model).navigation.label, rails_admin_list_path(:model_name => model.to_param)) %></li>
 <% end %>
-<% if @abstract_models.size > max_visible_tabs %>
+<% if models.size > max_visible_tabs %>
         <li class="more">
           <a href="#">&raquo;</a>
           <ul>
-          <% @abstract_models[max_visible_tabs..@abstract_models.size].each do |abstract_model| %>
-          <li <%if @page_type == abstract_model.pretty_name.downcase %>class="active"<% end %>><%= link_to(abstract_model.pretty_name, rails_admin_list_path(:model_name => abstract_model.to_param)) %></li>
+          <% models[max_visible_tabs..models.size].each do |model| %>
+          <li <%if @page_type == model.pretty_name.downcase %>class="active"<% end %>><%= link_to(RailsAdmin.config(model).navigation.label, rails_admin_list_path(:model_name => model.to_param)) %></li>
           <% end %>
           </ul>
         </li>
