Moved assets into engine specific subdirs
- This fixes an issue where the names of the assets in the engine
  collides with existing assets in the app.

--- a/app/views/layouts/rails_admin/delete.html.erb
+++ b/app/views/layouts/rails_admin/delete.html.erb
@@ -3,11 +3,9 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title><%= @page_name %> | <%= @plugin_name %></title>
-  <%= stylesheet_link_tag('base.css') %>
-  <%= stylesheet_link_tag('delete.css') %>
+  <%= stylesheet_link_tag('rails_admin/base.css') %>
+  <%= stylesheet_link_tag('rails_admin/delete.css') %>
   <title><%= @page_name %></title>
-  <link href="base.css" rel="stylesheet" type="text/css" />
-  <link href="delete.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div id="wraper">
