--- a/app/views/layouts/rails_admin/form.html.erb
+++ b/app/views/layouts/rails_admin/form.html.erb
@@ -3,16 +3,16 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title><%= @page_name %> | <%= @plugin_name %></title>
-  <%= stylesheet_link_tag('base.css') %>
-  <%= stylesheet_link_tag('create.css') %>
+  <%= stylesheet_link_tag('rails_admin/base.css') %>
+  <%= stylesheet_link_tag('rails_admin/create.css') %>
 
-  <%= javascript_include_tag('prototype.js') %>
-  <%= javascript_include_tag('prototype-base-extensions.js') %>
-  <%= javascript_include_tag('prototype-date-extensions.js') %>
-  <%= javascript_include_tag('getElementsBySelector.js') %>
-  <%= javascript_include_tag('datepicker.js') %>
-  <%= javascript_include_tag('associations.js') %>
-  <%= stylesheet_link_tag('datepicker.css') %>
+  <%= javascript_include_tag('rails_admin/prototype.js') %>
+  <%= javascript_include_tag('rails_admin/prototype-base-extensions.js') %>
+  <%= javascript_include_tag('rails_admin/prototype-date-extensions.js') %>
+  <%= javascript_include_tag('rails_admin/getElementsBySelector.js') %>
+  <%= javascript_include_tag('rails_admin/datepicker.js') %>
+  <%= javascript_include_tag('rails_admin/associations.js') %>
+  <%= stylesheet_link_tag('rails_admin/datepicker.css') %>
 
   <script type="text/javascript" language="javascript">
   Control.DatePicker.Locale['en_US'] = {
