--- a/app/views/layouts/rails_admin/dashboard.html.erb
+++ b/app/views/layouts/rails_admin/dashboard.html.erb
@@ -4,12 +4,12 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="robots" content="NONE,NOARCHIVE" />
   <title><%= @page_name %> | <%= @plugin_name %></title>
-  <%= stylesheet_link_tag('base') %>
-  <%= stylesheet_link_tag('dashboard') %>
+  <%= stylesheet_link_tag('rails_admin/base') %>
+  <%= stylesheet_link_tag('rails_admin/dashboard') %>
 
-  <%= javascript_include_tag('prototype.js') %>
-  <%= javascript_include_tag('scriptaculous.js') %>
-  <%= javascript_include_tag('dashboard.js') %>
+  <%= javascript_include_tag('rails_admin/prototype.js') %>
+  <%= javascript_include_tag('rails_admin/scriptaculous.js') %>
+  <%= javascript_include_tag('rails_admin/dashboard.js') %>
 
 </head>
 <body>
