--- a/app/views/layouts/rails_admin/list.html.erb
+++ b/app/views/layouts/rails_admin/list.html.erb
@@ -4,9 +4,9 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="robots" content="NONE,NOARCHIVE" />
   <title><%= @page_name %> | <%= @plugin_name %></title>
-  <%= stylesheet_link_tag('base') %>
-  <%= stylesheet_link_tag('list') %>
-  <%= javascript_include_tag('prototype.js') %>
+  <%= stylesheet_link_tag('rails_admin/base') %>
+  <%= stylesheet_link_tag('rails_admin/list') %>
+  <%= javascript_include_tag('rails_admin/prototype.js') %>
 
   <script type="text/javascript" language="javascript">
     function updatePage(paramList){
